Fixing editing comment on iphone.

--- a/media/css/circular/sass/social_page.scss
+++ b/media/css/circular/sass/social_page.scss
@@ -433,9 +433,6 @@ blockquote {
             max-width: 72px;
             max-height: 72px;
         }
-        .NB-banner-right {
-            display: none;
-        }
     }
     .NB-title {
         vertical-align: middle;
@@ -778,10 +775,6 @@ blockquote {
        margin: 0 10px;
        padding: 0 10px;
        font-size: $small-iphone-font-size;
-       
-       .NB-story-comment-edit {
-           display: none;
-       }
     }
 
     .NB-user-avatar img,
@@ -974,6 +967,7 @@ blockquote {
 
         @media screen and (max-width: 580px) {
             width: 100%;
+            height: 48px;
             float: none;
         }
     }
